--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -12,8 +12,30 @@
 .links{
 	cursor: pointer;
 }
+
+#title{
+	font-size: 26.5vh;
+	color: black;
+	background-color: white;
+}
+
+#banner{
+	font-size: 14.5vh;
+}
+
+.ticker  #banner  div :hover{
+	background-color: 'white';
+}
+
+
 @media screen and (max-width: 566px) {
 .homepage .ticker{
 	padding: 5%;
+}
+#title{
+	font-size: 26.5vw;
+}
+#banner{
+	font-size: 14.5vw;
 }
 }
