--- a/src/css/ticker.css
+++ b/src/css/ticker.css
@@ -7,7 +7,6 @@
     width: 100%;
 	display: flex;
 	border: 0px white solid;
-	font-size: 14.5vh;
 	font-family: 'Raleway', sans-serif;
 	font-weight: 900;
 	line-height: 1.05;
